@@ -1,2 +1,0 @@
-Net::Google provides a simple OOP-ish interface to the Google SOAP
-API.
